--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,21 +2,30 @@ version: "3.8"
 
 services:
   kafka:
-    image: apache/kafka:latest
+    image: apache/kafka:3.7.0
     container_name: kafka
     ports:
-      - "9092:9092"
-      - "9093:9093"   # controller port (example)
+      - "9092:9092" # external (for host)
+      - "9093:9093" # controller
     environment:
+      # Roles and IDs
       KAFKA_PROCESS_ROLES: "broker,controller"
       KAFKA_NODE_ID: "1"
       KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
-      KAFKA_LISTENERS: "PLAINTEXT://:9092,CONTROLLER://:9093"
-      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://localhost:9092"
-      KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
+
+      # Two listeners: INTERNAL for Kafka itself, EXTERNAL for your host
+      KAFKA_LISTENERS: "INTERNAL://kafka:19092,EXTERNAL://0.0.0.0:9092,CONTROLLER://kafka:9093"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:19092,EXTERNAL://localhost:9092"
+
+      # Tell Kafka which listener type is for what
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
       KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
+
+      # Other basic configs
       KAFKA_LOG_DIRS: "/var/lib/kafka/data"
-      # additional configs as needed...
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
+
     volumes:
       - kafka_data:/var/lib/kafka/data
 
